Bug 1262807 - Add logging support for TiledRegion classes. r=mstange a=sylvestre

MozReview-Commit-ID: JsmqcpYsyip

--HG--
extra : source : 0468fca8fde3e4a46d9d7fcdda3704a0d0792d34